--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "react": "^19.2.0",
     "@google/genai": "^1.30.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "6.22.0",
+    "react-router": "6.22.0",
+    "@remix-run/router": "1.15.0",
     "jspdf": "^3.0.4"
   },
   "devDependencies": {
